--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,6 @@
 <body>
     <h1 align="center">Hello, World</h1>
     <p align="center">yes, hello!</p>
-    <button dir="auto">sdfuhbjs</button>
+    <button aligh = "center" dir="auto">sdfuhbjs</button>
 </body>
 </html>
