--- a/jQuery实现冒泡、插入排序算法动画演示/index.html
+++ b/jQuery实现冒泡、插入排序算法动画演示/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-elemType" content="text/html; charset=utf-8" />
 <title>jquery快速排序算法动画特效</title>
 <script language="javascript" src="js/jquery.min.js"></script>
 </head>
